[tool.poetry]
name = "cursework-1"
version = "0.1.0"
description = ""
authors = ["RilzSnep <fff.fff.fff.08.fff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
isort = "^5.13.2"
mypy = "^1.12.0"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
